ui bug with teams page alignment

--- a/client/stylesheets/base/_teams.scss
+++ b/client/stylesheets/base/_teams.scss
@@ -8,7 +8,7 @@
         position: relative;
         margin: 40px;
         overflow: visible;
-        vertical-align: middle;
+        vertical-align: top;
         .image{
           width: 200px;
           height: 200px;
